<resources>
    <string name="app_name">Candy Shopping App</string>
    <string name="buy_mm"><![CDATA[Buy M&M]]></string>
    <string name="buy_skittles">Buy Skittles</string>
    <string name="buy_mm_discount"><![CDATA[Buy M&M 25% OFF]]></string>
    <string name="buy_skittles_discount"><![CDATA[Buy Skittles 20% OFF]]></string>
    <string name="product_on_sale">Product On Sale</string>
    <string name="register">Register</string>
    <string name="buy">Purchase</string>
    <string name="back">Back</string>
    <string name="total">Total: </string>
    <string name="mandm"><![CDATA[M&M]]></string>
    <string name="skittles">Skittles</string>
    <string name="customer_user_id">Customer User Id(Email address)</string>
    <string name="title_register">Register</string>
    <string name="conversion">Conversion Data</string>
    <string name="cv_gaid">GAID: </string>
    <string name="cv_afid">AppsFlyer ID: </string>
    <string name="cv_customer_user_id">Customer User Id:</string>
    <string name="cv_gp_referrer">Google Referrer:</string>
    <string name="cv_data">Conversion Data:</string>
    <string name="dev_mode_on">Developer Mode ON!</string>
    <string name="event_sent_prompt_intro">Below you see the In App Event that was sent to the AppsFlyer Server. You will see the same names and values if you download the In-App Events Raw Data Report via the AppsFlyer Dashboard.</string>
    <string name="event_name">Event Name:</string>
    <string name="event_value">Event Value:</string>
    <string name="event_value_sample"><![CDATA[{\"af_revenue\":6170,\"af_currency\":\"USD\",\"af_quantity\":1234,\"af_price\":5,\"af_content\":\"M&M\"}]]></string>
    <string name="event_name_sample">af_purchase</string>
    <string name="appsflyer_id">AppsFlyer ID</string>
    <string name="appsflyer_id_prompt_intro">Below you will see the AppsFlyer ID value that is associated with the install. You will see this same AppsFlyer ID value in the AppsFlyer ID column if you download the Install or In-App Events Raw Data Report via the AppsFlyer Dashboard.</string>
    <string name="google_referrer_value">Google Play Referrer value:</string>
    <string name="customer_user_id_prompt_intro">Below you will see the Customer User ID value that is associated with the install. You will see this same Customer User ID value in the Customer User ID column if you download the Install or In-App Events Raw Data Report via the AppsFlyer Dashboard.</string>
    <string name="customer_user_id_not_set">No Customer User ID has been defined yet.</string>
    <string name="google_referrer_not_set">Goolge Play Referrer could not be fetched.</string>
    <string name="google_referrer_prompt_intro">Below you will see the Google Play Referrer value that is associated with the install. You will see this same Google Play Referrer value in the Google Play Referrer column if you download the Install or In-App Events Raw Data Report via the AppsFlyer Dashboard.</string>
    <string name="discount_percent">-50%</string>
    <string name="discount">Discount: </string>
    <string name="cost">Cost: </string>
    <string name="retargeting_info">Retargeting Data:</string>
    <string name="unsupport_product">Sorry, this campaign is over!</string>
    <string name="error_no_af_ad">Invalid deep link!! \n\nCan not find af_ad from the link!</string>
    <string name="error_invalid_af_ad">Invalid deep link!! \n\nThe campaign for %s is over!</string>
    <string name="buy_it_anyway">Buy it anyway</string>
    <string name="please_wait">Please wait…</string>
    <string name="iphone">iPhone Xs</string>
    <string name="xiaomi">Xiaomi Mix 3</string>
    <string name="black_shoes">Black Shoes</string>
    <string name="red_shoes">Red Shoes</string>
    <string name="white_shoes">White Shoes</string>
</resources>
