<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_user_id_prompt_intro"/>
    <LinearLayout
        android:id="@+id/layoutCustomerUserId"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cv_customer_user_id"/>
        <TextView
            android:id="@+id/tvAppsFlyerId"
            android:textColor="@color/colorPrimary"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/event_name_sample"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvCustomerUserIdNotSet"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_user_id_not_set"/>
</LinearLayout>