<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff">
            <ImageView
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@mipmap/skittles"
                tools:src ="@mipmap/skittles"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:src="@mipmap/icon_sale"/>
        </FrameLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/buy_skittles"/>
            <EditText
                android:id="@+id/inputQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:ems="10"
                android:text="1"
                android:textAlignment="textEnd"
                android:inputType="numberSigned"/>
            <TextView
                android:id="@+id/textPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                tools:text=" × $10"/>
        </LinearLayout>
        <LinearLayout
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="24sp"
                android:layout_marginEnd="10dp"
                android:text="@string/cost"/>
            <TextView
                android:minWidth="100dp"
                android:gravity="end"
                android:id="@+id/textOrigPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="24sp"
                tools:text="$10"/>

        </LinearLayout>
        <LinearLayout
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#f00"
                android:gravity="end"
                android:textSize="24sp"
                android:text="@string/discount"/>
            <TextView
                android:id="@+id/textViewDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:minWidth="80dp"
                android:gravity="center"
                android:background="#f00"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textStyle="italic"
                android:textColor="#fff"
                android:textSize="24sp"
                android:text="@string/discount_percent"
                />
        </LinearLayout>
        <LinearLayout
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="28sp"
                android:layout_marginEnd="10dp"
                android:text="@string/total"/>
            <TextView
                android:minWidth="100dp"
                android:id="@+id/textTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#f00"
                android:gravity="end"
                android:textStyle="bold"
                android:textSize="36sp"
                tools:text="$10"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textColor="#fff"
                android:id="@+id/btnPurchase"
                android:padding="20dp"
                android:minWidth="140dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/buy"/>
            <Button
                android:textColor="#fff"
                android:id="@+id/btnBack"
                android:padding="20dp"
                android:minWidth="140dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/back"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>